[package]
name = "flatgeobuf-bevy"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[features]
default = ["native"]

native = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
  "wasm-bindgen",
]

trace = ["bevy/trace_chrome"]

[dependencies]
bevy = {version = "0.5.0", default-features = false}
bevy_webgl2 = {version = "0.5.0", optional = true}
winit = {version = "0.24.0", features = ["web-sys", "x11"], default-features = false}
lyon = "0.16.2"
earcutr = { git = "https://github.com/donbright/earcutr" }
flatgeobuf = "0.5.0" 
geozero = {version = "0.7.4", default-features = false}
wasm-bindgen = {version="0.2.68", optional = true}
seek_bufread = "1.2.2"

[profile.dev]
opt-level = 1

#[profile.release]
#lto = true
#opt-level = 's'
